whoami/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
  annotations:
    cert-manager.io/issuer: le-staging
spec:
  tls:
    - hosts:
        - whoami.wgbh-mla.org
      secretName: tls-whoami-ingress-http
  rules:
    - host: whoami.wgbh-mla.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: web
